--- a/src/PowerBridge/PowerBridge.nuspec
+++ b/src/PowerBridge/PowerBridge.nuspec
@@ -6,7 +6,9 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
+    <iconUrl>https://raw.githubusercontent.com/PowerBridge/PowerBridge/master/images/icon.png</iconUrl>
     <projectUrl>https://github.com/PowerBridge/PowerBridge/wiki</projectUrl>
+    <licenseUrl>https://raw.githubusercontent.com/PowerBridge/PowerBridge/master/LICENSE.txt</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
