--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Management.Automation" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Internal\ErrorRecordExtensions.cs" />
     <Compile Include="Internal\IPowerShellHostOutput.cs" />
     <Compile Include="Internal\IBuildTaskLog.cs" />
     <Compile Include="Internal\PowerShellHost.cs" />
