--- a/src/PowerBridge.Tests/PowerBridge.Tests.csproj
+++ b/src/PowerBridge.Tests/PowerBridge.Tests.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="IntegrationTests\InvokePowerShellTest.cs" />
+    <Compile Include="Mocks\MockBuildTaskLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
