Refactor InvokePowerShell.Execute() to take an ExecuteParameters object

--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Management.Automation" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Internal\ExecuteParameters.cs" />
     <Compile Include="Internal\ErrorRecordExtensions.cs" />
     <Compile Include="Internal\IPowerShellHostOutput.cs" />
     <Compile Include="Internal\IBuildTaskLog.cs" />
