Add a File parameter to InvokePowerShell build task

--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Internal\ExecuteParameters.cs" />
     <Compile Include="Internal\ErrorRecordExtensions.cs" />
+    <Compile Include="Internal\IFileSystem.cs" />
     <Compile Include="Internal\IPowerShellHostOutput.cs" />
     <Compile Include="Internal\IBuildTaskLog.cs" />
     <Compile Include="Internal\PowerShellHost.cs" />
