--- a/samples/SampleInvokePowerShell/SampleInvokePowerShell.csproj
+++ b/samples/SampleInvokePowerShell/SampleInvokePowerShell.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\PowerBridge.1.0.5246.36932\build\PowerBridge.props" Condition="Exists('packages\PowerBridge.1.0.5246.36932\build\PowerBridge.props')" />
+  <Import Project="packages\PowerBridge.1.2.5257.17148\build\PowerBridge.props" Condition="Exists('packages\PowerBridge.1.2.5257.17148\build\PowerBridge.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -8,11 +8,11 @@
     <ProjectGuid>{D8029702-06C3-44B3-9426-2900AA12EA23}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleInvokePowerShellExpression</RootNamespace>
-    <AssemblyName>SampleInvokePowerShellExpression</AssemblyName>
+    <RootNamespace>SampleInvokePowerShell</RootNamespace>
+    <AssemblyName>SampleInvokePowerShell</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>23db52d2</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>4fef6936</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,34 +46,37 @@
     <None Include="packages.config" />
     <None Include="Scripts\MyNiftyPowerShellScript.ps1" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TextFile.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\PowerBridge.1.0.5246.36932\build\PowerBridge.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\PowerBridge.1.0.5246.36932\build\PowerBridge.props'))" />
-  </Target>
   <Target Name="MyNiftyPowerShellCommand1" BeforeTargets="Build">
-    <InvokePowerShell Expression="Write-Warning 'Bridge out ahead!'" />
+    <InvokePowerShell Expression="Write-Warning 'Warnings and errors can be triggered directly in the proj file.'" />
   </Target>
   <Target Name="MyNiftyPowerShellCommand2" BeforeTargets="Build">
-    <InvokePowerShell Expression="Write-Warning 'The following project smells funny: $(ProjectName)'" />
+    <InvokePowerShell Expression="Write-Warning 'MSBuild properties can be referenced. This project is called $(ProjectName)'" />
   </Target>
   <Target Name="MyNiftyPowerShellCommand3" BeforeTargets="Build">
     <PropertyGroup>
       <Script><![CDATA[
-            function LostInSpace
+            function MyNiftyFunction
             {
-                Write-Warning 'Danger, Will Robinson!'
+                Write-Warning 'Non-trival expressions can be embedded in the proj file.'
             }
             
-            LostInSpace
-        ]]></Script>
+            MyNiftyFunction
+      ]]></Script>
     </PropertyGroup>
     <InvokePowerShell Expression="$(Script)" />
   </Target>
-  <Target Name="MyNiftyPowerShellCommand3" BeforeTargets="Build">
-    <InvokePowerShell Expression="&amp; '$(ProjectDir)Scripts\MyNiftyPowerShellScript.ps1'" />
+  <Target Name="MyNiftyPowerShellCommand4" BeforeTargets="Build">
+    <InvokePowerShell File="$(ProjectDir)Scripts\MyNiftyPowerShellScript.ps1" Arguments="$(ProjectDir)TextFile.txt" />
+  </Target>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\PowerBridge.1.2.5257.17148\build\PowerBridge.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\PowerBridge.1.2.5257.17148\build\PowerBridge.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
