--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Internal\IPowerShellCallStackProvider.cs" />
     <Compile Include="Internal\LogEntryInfo.cs" />
     <Compile Include="Internal\ExecuteParameters.cs" />
     <Compile Include="Internal\IFileSystem.cs" />
