--- a/src/.nuget/NuGet.targets
+++ b/src/.nuget/NuGet.targets
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-        <OutputPackages Include="$(TargetDir)*.nupkg" />
-  </ItemGroup>
-  <PropertyGroup>
+    <PropertyGroup>
         <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">$(MSBuildProjectDirectory)\..\</SolutionDir>
 
         <!-- Enable the restore command to run before builds -->
@@ -16,7 +13,7 @@
         <RequireRestoreConsent Condition=" '$(RequireRestoreConsent)' != 'false' ">true</RequireRestoreConsent>
 
         <!-- Download NuGet.exe if it does not already exist -->
-        <DownloadNuGetExe Condition=" '$(DownloadNuGetExe)' == '' ">true</DownloadNuGetExe>
+        <DownloadNuGetExe Condition=" '$(DownloadNuGetExe)' == '' ">false</DownloadNuGetExe>
     </PropertyGroup>
 
     <ItemGroup Condition=" '$(PackageSources)' == '' ">
@@ -79,11 +76,6 @@
             $(BuildDependsOn);
             BuildPackage;
         </BuildDependsOn>
-
-        <CleanDependsOn Condition="$(BuildPackage) == 'true'">
-            $(CleanDependsOn);
-            CleanPackages;
-        </CleanDependsOn>
     </PropertyGroup>
 
     <Target Name="CheckPrerequisites">
@@ -117,10 +109,6 @@
         <Exec Command="$(BuildCommand)"
               LogStandardErrorAsError="true"
               Condition=" '$(OS)' == 'Windows_NT' " />
-    </Target>
-
-    <Target Name="CleanPackages">
-        <Delete Files="@(OutputPackages)" />
     </Target>
 
   <UsingTask TaskName="DownloadNuGet" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
