Bug fix: Log objects that fall off the pipeline to the build log

--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -51,11 +51,13 @@
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Internal\IPowerShellCallStackProvider.cs" />
+    <Compile Include="Internal\IPowerShellStringProvider.cs" />
     <Compile Include="Internal\LogEntryInfo.cs" />
     <Compile Include="Internal\ExecuteParameters.cs" />
     <Compile Include="Internal\IFileSystem.cs" />
     <Compile Include="Internal\IPowerShellHostOutput.cs" />
     <Compile Include="Internal\IBuildTaskLog.cs" />
+    <Compile Include="Internal\PowerShellOutputList.cs" />
     <Compile Include="Internal\PowerShellHost.cs" />
     <Compile Include="Internal\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
