Feature: Add support to automatically invoke .BuildScripts\BeforeBuild.ps1 and .BuildScripts\AfterBuild.ps1 if they exist in the project directory

--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -73,6 +73,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Debug.ps1" />
+    <None Include="PowerBridge.targets" />
     <None Include="PowerBridge.props" />
   </ItemGroup>
   <ItemGroup>
