Feature: Automatically add BeforeBuild.ps1 and AfterBuild.ps1 to the project when installing the NuGet package
Only perform the operation if:
- The build scripts do not already exist
- The project does not already call the InvokePowerShell build task

--- a/src/PowerBridge/PowerBridge.csproj
+++ b/src/PowerBridge/PowerBridge.csproj
@@ -74,10 +74,13 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Debug.ps1" />
+    <None Include="NugetPackageFiles\BuildScripts\AfterBuild.ps1" />
+    <None Include="NugetPackageFiles\BuildScripts\BeforeBuild.ps1" />
     <None Include="NugetPackageFiles\build\PowerBridge.targets" />
     <None Include="NugetPackageFiles\build\PowerBridge.props" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NugetPackageFiles\tools\install.ps1" />
     <None Include="PowerBridge.nuspec" />
   </ItemGroup>
   <ItemGroup>
