--- a/src/PowerBridge/PowerBridge.nuspec
+++ b/src/PowerBridge/PowerBridge.nuspec
@@ -15,7 +15,9 @@
     <tags>powershell msbuild build task</tags>
   </metadata>
   <files>
+    <file src="NugetPackageFiles\tools\install.ps1" target="tools"/>
     <file src="NugetPackageFiles\build\PowerBridge.props" target="build"/>
     <file src="NugetPackageFiles\build\PowerBridge.targets" target="build"/>
+    <file src="NugetPackageFiles\BuildScripts\*.*" target=".BuildScripts"/>
   </files>  
 </package>
